# learning

./: .gitignore
languages/c++/fundamentos/: CMakeLists.txt
languages/c++/fundamentos/include/: leccion1.hpp
languages/c++/fundamentos/src/: main.cpp
languages/c++/intermedio/: CMakeLists.txt  build.sh  run.sh
languages/c++/intermedio/docs/: test.txt
languages/c++/intermedio/include/: Car.hpp  Engine.hpp  FileWriter.hpp  IntBuffer.hpp  Monster.hpp  Timer.hpp  UniqueIntPtr.hpp
languages/css/: index.html
languages/css/styles/: index.css
languages/php/api_rest_vanilla/: index.php
languages/php/composer_project/: composer.json
languages/php/fundamentos/: leccion1.php  leccion2.php  leccion3.php  leccion4.php  leccion5.php
languages/php/laravel/: package-lock.json
languages/python/algorithms/: pyrightconfig.json
languages/python/fundamentos/: leccion1.1.py  leccion1.py  leccion2.py  main.py
machine-learning/src/: main.py
machine-learning/src/models/: Capa.py  DatasetManager.py  Sensor.py  Vector2D.py
math-physics/: CMakeLists.txt  compile.sh  rebuild.sh
math-physics/include/: Ball.h  Window.h
math-physics/src/: Ball.cpp  Window.cpp  main.cpp
opengl/: CMakeLists.txt  build.sh  compile.sh
opengl/include/: Window.h
opengl/include/glad/: glad.h
opengl/src/: Window.cpp  main.cpp
opengl/src/glad/: glad.c
sinesynth/: CMakeLists.txt
sinesynth/include/: AudioFile.h
sinesynth/src/: main.cpp
threejs/threejs-3d/: index.html  package.json  tsconfig.app.json  vite.config.ts
threejs/threejs-3d/src/: App.tsx
(+39 files in other folders)
